--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   share: ^0.6.1+1
+  shared_preferences: ^0.4.1
 
 dev_dependencies:
   flutter_test:
